--- a/songlist.html
+++ b/songlist.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
     <head>
-        <title>Song Listkjhkdfjsk</title>
+        <title>Song List</title>
         <meta charset="utf8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     </head>
@@ -37,7 +37,7 @@
             }
 
         </script>
-        <h1>Song List</h1>
+        <h1>Song Listjksdhfkljasdlfjh</h1>
         <div id="songform" class="container" >
             <form id="song" class="form-group" class="border border-info">
                 <table>
