--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </script>
         <h1>Song Listjksdhfkljasdlfjh</h1>
         <div id="songform" class="container" >
+            <a href="index2.html">jsdhfgjsjhsdf</a>
             <form id="song" class="form-group" class="border border-info">
                 <table>
                     <tr class="row">
