--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
             }
 
         </script>
-        <h1>Song Listjksdhfkljasdlfjh</h1>
+        <h1>Song List</h1>
         <div id="songform" class="container" >
-            <a href="index2.html">jsdhfgjsjhsdf</a>
             <form id="song" class="form-group" class="border border-info">
                 <table>
                     <tr class="row">
